Fix initialization logic and improve readability across core and plugins
- Replace incorrect method `preInitMethodsOf` with `postInitMethodsOf`.
- Enhance Javadoc annotations with cleaner docstring syntax.
- Introduce optional runtime library inclusion in `BundleKBean`.
- Refactor dependency resolution for clearer context in logs.
- Add utility methods and minor performance improvements across files.